--- a/.editorconfig
+++ b/.editorconfig
@@ -6,4 +6,4 @@ charset = utf-8
 end_of_line = lf
 indent_size = 2
 indent_style = space
-trim_trailing_whitespace = true
+#trim_trailing_whitespace = true
